tests/js_error/source_locations/expression/call/call_varargs.exp
Error: 
  at foo (tests/js_error/source_locations/expression/call/call_varargs.js:2:9)
  at <global> (tests/js_error/source_locations/expression/call/call_varargs.js:5:1)
