tests/js_error/source_locations/expression/call/call_varargs.js
function foo() {
  throw new Error();
}

foo(1, ...[]);